# fast_lambda

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-lambda.yml
